[package]
name = "tictactoe"
version = "0.1.0"
edition = "2021"
authors = ["Deepak Chaudhary <aideepakchaudhary@gmail.com>", "Aaron Bassett <aaron.bassett@parity.io>"]
description = "An on-chain tictactoe game contract in ink!"
publish = false

[dependencies]
ink = { version = "4.2.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "4.2.1"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []